--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
         }
 
         function startAssetsLoading() {
-            console.log('start assets');
             queue.removeAllEventListeners();
             queue.on("complete", loadComplete);
             queue.on("progress", handleProgress);
@@ -129,6 +128,7 @@
             percentLoaded = null;
             loading = null;
             setupStage();
+            queue.removeAllEventListeners();
         }
 
         function setupStage(){
@@ -138,29 +138,29 @@
             });
         }
 
-        /*        document.onreadystatechange = () => {
-                    if (document.readyState === 'complete') {
-                        resize();
-                        window.addEventListener('resize', resize);
-                    }
-                };
+        document.onreadystatechange = () => {
+            if (document.readyState === 'complete') {
+                resize();
+                window.addEventListener('resize', resize);
+            }
+        };
 
-                function resize() {
-                    const canvas = document.getElementById('gameStage');
-                    const window_width = window.innerWidth;
-                    const window_height = window.innerHeight;
-                    const window_ratio = window_width / window_height;
-                    const game_ratio = 1920 / 1080;
-                    if (window_ratio < game_ratio){
-                        canvas.style.width = window_width + 'px';
-                        canvas.style.height = Math.floor(window_width / game_ratio) + 'px';
-                    } else {
-                        canvas.style.width = Math.floor(window_height * game_ratio) + 'px';
-                        canvas.style.height = window_height + 'px';
-                    }
-                    console.log('w '+window_width);
-                    console.log('h '+window_height);
-                }*/
+        function resize() {
+            const canvas = document.getElementById('gameStage');
+            const window_width = window.innerWidth;
+            const window_height = window.innerHeight;
+            const window_ratio = window_width / window_height;
+            const game_ratio = 1920 / 1080;
+            if (window_ratio < game_ratio){
+                canvas.style.width = window_width + 'px';
+                canvas.style.height = Math.floor(window_width / game_ratio) + 'px';
+            } else {
+                canvas.style.width = Math.floor(window_height * game_ratio) + 'px';
+                canvas.style.height = window_height + 'px';
+            }
+            console.log('w '+window_width);
+            console.log('h '+window_height);
+        }
 
     </script>
 
