make image method changed messages component added balance check added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/VideoPokerGame.js"></script>
     <script src="js/PaytableWin.js"></script>
     <script src="js/SoundInfoComponent.js"></script>
+    <script src="js/MessagesComponent.js"></script>
     <script>
 
         "use strict";
@@ -81,6 +82,7 @@
                 {id: "background", src:"assets/background.jpg"},
                 {id: "infoPanel", src:"assets/infoPanel.jpg"},
                 {id: "controlboardBackground", src:"assets/controlboardBackground.png"},
+                {id: "messagesBackground", src:"assets/messagesBackground.jpg"},
                 {id: "button", src:"assets/button.png"},
                 {id: "cardsAtlas", src:"assets/atlas.png"},
                 {id: "cardsJson", src:"assets/atlas.json"},
