--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/common/SoundManager.js"></script>
+    <script src="js/common/compressedCommon.js"></script>
+    <script src="js/compressed.js"></script>
+<!--    <script src="js/common/SoundManager.js"></script>
     <script src="js/common/CustomMethods.js"></script>
     <script src="js/common/Button.js"></script>
     <script src="js/Server.js"></script>
@@ -20,7 +22,7 @@
     <script src="js/VideoPokerGame.js"></script>
     <script src="js/PaytableWin.js"></script>
     <script src="js/SoundInfoComponent.js"></script>
-    <script src="js/MessagesComponent.js"></script>
+    <script src="js/MessagesComponent.js"></script>-->
     <script>
 
         "use strict";
